Updated health checks
