# gateway-service/app/src/gateway/static/swagger.yaml
@@ -4,7 +4,7 @@ info:
   version: 1.0.0
 
 servers:
-  - url: http://gateway-service:5000
+  - url: http://localhost:5000
     description: Local testing
 
 paths:
@@ -12,17 +12,6 @@ paths:
   /api/health_check:
     get:
       description: Health check to retrun static content
-      parameters:
-        - in: query
-          name: action_status
-          description: Only valid in combination with asynchronous = true
-          required: false
-          schema:
-            type: string
-            enum:
-              - SUBMITTED
-              - DRAFT
-            default: SUBMITTED
       responses:
         200:
           description: OK
@@ -324,7 +313,9 @@ components:
       properties:
         system:
           type: string
-        status:
+        service_status:
+          type: string
+        database_host:
           type: string
         database_status:
           type: string
